cds-efk/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: kibana
   namespace: logging
spec:
   rules:
   - host: kibana-ecndpx.yun-paas.com
     http:
       paths:
       - path:
         backend:
          serviceName: kibana
          servicePort: 5601
